# minisat

./: .gitmodules  Makefile  dune-project  minisat.opam  minisat.opam.locked  minisat.opam.template
lib/: core.ml  dune  minisat.ml  minisat.mli  solver.ml  solver.mli  vec.ml  vec.mli
test/: benchmarks.ml  dune  test.ml
test/benchmarks/satlib/: dune  uf20-0201.cnf  uf20-062.cnf  uf200-02.cnf
